test/shouldPass/expr/orInt.pas
program Sample;
var
  x : integer;
begin
  x := 100 or 30;
  writeln(x);
end.
