test/shouldFail/expr/orDouble.pas
program Sample;
var
  x : double;
begin
  x := 1.1 or 2.0;
//     ^^^^^^^^^^
// Operator 'or' cannot be applied to double and double
end.
